commit bilingual contents

--- a/docs/docs-ref-autogen/word/word.interfaces.fontloadoptions.yml
+++ b/docs/docs-ref-autogen/word/word.interfaces.fontloadoptions.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 5f68922643728e84f3775a81953024b00fcecd67
-ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
+ms.openlocfilehash: bf4a9a1d865c741b122e810e14b9baa66b0b39be
+ms.sourcegitcommit: a422a2c3b9ada79477a9f873276b3c00765f7072
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/13/2019
-ms.locfileid: "29982726"
+ms.lasthandoff: 03/27/2019
+ms.locfileid: "30900368"
 items:
 - uid: word.Word.Interfaces.FontLoadOptions
   summary: >-
-    <span data-ttu-id="a51a1-101">表示字体。</span><span class="sxs-lookup"><span data-stu-id="a51a1-101">Represents a font.</span></span>
+    <span data-ttu-id="40b59-101">表示字体。</span><span class="sxs-lookup"><span data-stu-id="40b59-101">Represents a font.</span></span>
 
 
-    <span data-ttu-id="a51a1-102">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a51a1-102">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="40b59-102">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="40b59-102">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: Word.Interfaces.FontLoadOptions
   fullName: Word.Interfaces.FontLoadOptions
   langs:
@@ -44,10 +44,10 @@ items:
       - boolean
 - uid: word.Word.Interfaces.FontLoadOptions.bold
   summary: >-
-    <span data-ttu-id="a51a1-p101">获取或设置表示字体是否为粗体的值。如果字体格式为粗体则为 true，否则为 false。</span><span class="sxs-lookup"><span data-stu-id="a51a1-p101">Gets or sets a value that indicates whether the font is bold. True if the font is formatted as bold, otherwise, false.</span></span>
+    <span data-ttu-id="40b59-103">获取或设置表示字体是否为粗体的值。</span><span class="sxs-lookup"><span data-stu-id="40b59-103">Gets or sets a value that indicates whether the font is bold.</span></span> <span data-ttu-id="40b59-104">如果字体格式为粗体则为 true，否则为 false。</span><span class="sxs-lookup"><span data-stu-id="40b59-104">True if the font is formatted as bold, otherwise, false.</span></span>
 
 
-    <span data-ttu-id="a51a1-105">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a51a1-105">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="40b59-105">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="40b59-105">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: bold
   fullName: bold
   langs:
@@ -60,10 +60,10 @@ items:
       - boolean
 - uid: word.Word.Interfaces.FontLoadOptions.color
   summary: >-
-    <span data-ttu-id="a51a1-106">获取或设置指定字体的颜色。</span><span class="sxs-lookup"><span data-stu-id="a51a1-106">Gets or sets the color for the specified font.</span></span> <span data-ttu-id="a51a1-107">您可以提供中的值\#RRGGBB 格式或颜色名称。</span><span class="sxs-lookup"><span data-stu-id="a51a1-107">You can provide the value in the '\#RRGGBB' format or the color name.</span></span>
+    <span data-ttu-id="40b59-106">获取或设置指定字体的颜色。</span><span class="sxs-lookup"><span data-stu-id="40b59-106">Gets or sets the color for the specified font.</span></span> <span data-ttu-id="40b59-107">您可以提供 "\#RRGGBB" 格式的值或颜色名称。</span><span class="sxs-lookup"><span data-stu-id="40b59-107">You can provide the value in the '\#RRGGBB' format or the color name.</span></span>
 
 
-    <span data-ttu-id="a51a1-108">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a51a1-108">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="40b59-108">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="40b59-108">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: color
   fullName: color
   langs:
@@ -76,10 +76,10 @@ items:
       - boolean
 - uid: word.Word.Interfaces.FontLoadOptions.doubleStrikeThrough
   summary: >-
-    <span data-ttu-id="a51a1-109">获取或设置一个值，该值指示字体是否具有双删除线。</span><span class="sxs-lookup"><span data-stu-id="a51a1-109">Gets or sets a value that indicates whether the font has a double strikethrough.</span></span> <span data-ttu-id="a51a1-110">如果字体为双删除线文本，否则为返回 false，则为 true。</span><span class="sxs-lookup"><span data-stu-id="a51a1-110">True if the font is formatted as double strikethrough text, otherwise, false.</span></span>
+    <span data-ttu-id="40b59-109">获取或设置一个值, 该值指示字体是否具有双删除线。</span><span class="sxs-lookup"><span data-stu-id="40b59-109">Gets or sets a value that indicates whether the font has a double strikethrough.</span></span> <span data-ttu-id="40b59-110">如果字体格式设置为加双删除线的文本则为 true，否则为 false。</span><span class="sxs-lookup"><span data-stu-id="40b59-110">True if the font is formatted as double strikethrough text, otherwise, false.</span></span>
 
 
-    <span data-ttu-id="a51a1-111">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a51a1-111">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="40b59-111">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="40b59-111">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: doubleStrikeThrough
   fullName: doubleStrikeThrough
   langs:
@@ -92,10 +92,13 @@ items:
       - boolean
 - uid: word.Word.Interfaces.FontLoadOptions.highlightColor
   summary: >-
-    <span data-ttu-id="a51a1-112">获取或设置的突出显示颜色。</span><span class="sxs-lookup"><span data-stu-id="a51a1-112">Gets or sets the highlight color.</span></span> <span data-ttu-id="a51a1-113">若要将其设置，使用一个值，也在\#RRGGBB 格式或颜色名称。</span><span class="sxs-lookup"><span data-stu-id="a51a1-113">To set it, use a value either in the '\#RRGGBB' format or the color name.</span></span> <span data-ttu-id="a51a1-114">若要删除突出显示颜色，请将其设置为 null。</span><span class="sxs-lookup"><span data-stu-id="a51a1-114">To remove highlight color, set it to null.</span></span> <span data-ttu-id="a51a1-115">返回突出显示颜色可以是在\#RRGGBB 格式，对于混合突出显示颜色，为空字符串，或无 null 突出显示颜色。</span><span class="sxs-lookup"><span data-stu-id="a51a1-115">The returned highlight color can be in the '\#RRGGBB' format, an empty string for mixed highlight colors, or null for no highlight color.</span></span>
+    <span data-ttu-id="40b59-112">获取或设置突出显示颜色。</span><span class="sxs-lookup"><span data-stu-id="40b59-112">Gets or sets the highlight color.</span></span> <span data-ttu-id="40b59-113">若要对其进行设置, 请使用 "\#RRGGBB" 格式的值或颜色名称。</span><span class="sxs-lookup"><span data-stu-id="40b59-113">To set it, use a value either in the '\#RRGGBB' format or the color name.</span></span> <span data-ttu-id="40b59-114">若要删除突出显示颜色, 请将其设置为 null。</span><span class="sxs-lookup"><span data-stu-id="40b59-114">To remove highlight color, set it to null.</span></span> <span data-ttu-id="40b59-115">返回的突出显示颜色可以是 "\#RRGGBB" 格式、用于混合突出显示颜色的空字符串或 null (无突出显示颜色)。</span><span class="sxs-lookup"><span data-stu-id="40b59-115">The returned highlight color can be in the '\#RRGGBB' format, an empty string for mixed highlight colors, or null for no highlight color.</span></span>
 
 
-    <span data-ttu-id="a51a1-116">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a51a1-116">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="40b59-116">**注意**: 在 Office for Windows Desktop 中, 只有默认的突出显示颜色可用。</span><span class="sxs-lookup"><span data-stu-id="40b59-116">**Note**: Only the default highlight colors are available in Office for Windows Desktop.</span></span> <span data-ttu-id="40b59-117">这些是 "黄色"、"酸橙色"、"青绿色"、"浅绿"、"浅绿"、"Blue"、"Red"、"DarkBlue"、"青色"、"绿色"、"紫色"、"DarkRed"、"橄榄色"、"灰色"、"LightGray" 和 "黑色"。</span><span class="sxs-lookup"><span data-stu-id="40b59-117">These are "Yellow", "Lime", "Turquoise", "Pink", "Blue", "Red", "DarkBlue", "Teal", "Green", "Purple", "DarkRed", "Olive", "Gray", "LightGray", and "Black".</span></span> <span data-ttu-id="40b59-118">当外接程序在 Office for Windows Desktop 中运行时, 应用于该字体的任何其他颜色将转换为最接近的颜色。</span><span class="sxs-lookup"><span data-stu-id="40b59-118">When the add-in runs in Office for Windows Desktop, any other color is converted to the closest color when applied to the font.</span></span>
+
+
+    <span data-ttu-id="40b59-119">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="40b59-119">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: highlightColor
   fullName: highlightColor
   langs:
@@ -108,10 +111,10 @@ items:
       - boolean
 - uid: word.Word.Interfaces.FontLoadOptions.italic
   summary: >-
-    <span data-ttu-id="a51a1-p105">获取或设置表示字体是否为斜体的值。如果字体为斜体则为 true，否则为 false。</span><span class="sxs-lookup"><span data-stu-id="a51a1-p105">Gets or sets a value that indicates whether the font is italicized. True if the font is italicized, otherwise, false.</span></span>
+    <span data-ttu-id="40b59-120">获取或设置表示字体是否为斜体的值。</span><span class="sxs-lookup"><span data-stu-id="40b59-120">Gets or sets a value that indicates whether the font is italicized.</span></span> <span data-ttu-id="40b59-121">如果字体为斜体则为 true，否则为 false。</span><span class="sxs-lookup"><span data-stu-id="40b59-121">True if the font is italicized, otherwise, false.</span></span>
 
 
-    <span data-ttu-id="a51a1-119">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a51a1-119">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="40b59-122">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="40b59-122">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: italic
   fullName: italic
   langs:
@@ -124,10 +127,10 @@ items:
       - boolean
 - uid: word.Word.Interfaces.FontLoadOptions.name
   summary: >-
-    <span data-ttu-id="a51a1-120">获取或设置表示字体名称的值。</span><span class="sxs-lookup"><span data-stu-id="a51a1-120">Gets or sets a value that represents the name of the font.</span></span>
+    <span data-ttu-id="40b59-123">获取或设置表示字体名称的值。</span><span class="sxs-lookup"><span data-stu-id="40b59-123">Gets or sets a value that represents the name of the font.</span></span>
 
 
-    <span data-ttu-id="a51a1-121">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a51a1-121">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="40b59-124">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="40b59-124">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: name
   fullName: name
   langs:
@@ -140,10 +143,10 @@ items:
       - boolean
 - uid: word.Word.Interfaces.FontLoadOptions.size
   summary: >-
-    <span data-ttu-id="a51a1-122">获取或设置表示字体大小（以磅值表示）的值。</span><span class="sxs-lookup"><span data-stu-id="a51a1-122">Gets or sets a value that represents the font size in points.</span></span>
+    <span data-ttu-id="40b59-125">获取或设置表示字体大小（以磅值表示）的值。</span><span class="sxs-lookup"><span data-stu-id="40b59-125">Gets or sets a value that represents the font size in points.</span></span>
 
 
-    <span data-ttu-id="a51a1-123">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a51a1-123">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="40b59-126">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="40b59-126">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: size
   fullName: size
   langs:
@@ -156,10 +159,10 @@ items:
       - boolean
 - uid: word.Word.Interfaces.FontLoadOptions.strikeThrough
   summary: >-
-    <span data-ttu-id="a51a1-124">获取或设置一个值，指示该字体是否删除线。</span><span class="sxs-lookup"><span data-stu-id="a51a1-124">Gets or sets a value that indicates whether the font has a strikethrough.</span></span> <span data-ttu-id="a51a1-125">如果字体为删除线文本，否则为返回 false，则为 true。</span><span class="sxs-lookup"><span data-stu-id="a51a1-125">True if the font is formatted as strikethrough text, otherwise, false.</span></span>
+    <span data-ttu-id="40b59-127">获取或设置一个值, 该值指示字体是否具有删除线。</span><span class="sxs-lookup"><span data-stu-id="40b59-127">Gets or sets a value that indicates whether the font has a strikethrough.</span></span> <span data-ttu-id="40b59-128">如果字体格式设置为加删除线的文本则为 true，否则为 false。</span><span class="sxs-lookup"><span data-stu-id="40b59-128">True if the font is formatted as strikethrough text, otherwise, false.</span></span>
 
 
-    <span data-ttu-id="a51a1-126">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a51a1-126">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="40b59-129">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="40b59-129">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: strikeThrough
   fullName: strikeThrough
   langs:
@@ -172,10 +175,10 @@ items:
       - boolean
 - uid: word.Word.Interfaces.FontLoadOptions.subscript
   summary: >-
-    <span data-ttu-id="a51a1-p107">获取或设置表示字体是否为下标的值。如果字体格式为下标则为 true，否则为 false。</span><span class="sxs-lookup"><span data-stu-id="a51a1-p107">Gets or sets a value that indicates whether the font is a subscript. True if the font is formatted as subscript, otherwise, false.</span></span>
+    <span data-ttu-id="40b59-130">获取或设置表示字体是否为下标的值。</span><span class="sxs-lookup"><span data-stu-id="40b59-130">Gets or sets a value that indicates whether the font is a subscript.</span></span> <span data-ttu-id="40b59-131">如果字体格式为下标则为 true，否则为 false。</span><span class="sxs-lookup"><span data-stu-id="40b59-131">True if the font is formatted as subscript, otherwise, false.</span></span>
 
 
-    <span data-ttu-id="a51a1-129">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a51a1-129">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="40b59-132">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="40b59-132">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: subscript
   fullName: subscript
   langs:
@@ -188,10 +191,10 @@ items:
       - boolean
 - uid: word.Word.Interfaces.FontLoadOptions.superscript
   summary: >-
-    <span data-ttu-id="a51a1-p108">获取或设置表示字体是否为上标的值。如果字体格式为上标则为 true，否则为 false。</span><span class="sxs-lookup"><span data-stu-id="a51a1-p108">Gets or sets a value that indicates whether the font is a superscript. True if the font is formatted as superscript, otherwise, false.</span></span>
+    <span data-ttu-id="40b59-133">获取或设置表示字体是否为上标的值。</span><span class="sxs-lookup"><span data-stu-id="40b59-133">Gets or sets a value that indicates whether the font is a superscript.</span></span> <span data-ttu-id="40b59-134">如果字体格式为上标则为 true，否则为 false。</span><span class="sxs-lookup"><span data-stu-id="40b59-134">True if the font is formatted as superscript, otherwise, false.</span></span>
 
 
-    <span data-ttu-id="a51a1-132">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a51a1-132">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="40b59-135">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="40b59-135">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: superscript
   fullName: superscript
   langs:
@@ -204,10 +207,10 @@ items:
       - boolean
 - uid: word.Word.Interfaces.FontLoadOptions.underline
   summary: >-
-    <span data-ttu-id="a51a1-133">获取或设置一个值，指示字体的下划线类型。</span><span class="sxs-lookup"><span data-stu-id="a51a1-133">Gets or sets a value that indicates the font's underline type.</span></span> <span data-ttu-id="a51a1-134">None 如果的字体不加下划线。</span><span class="sxs-lookup"><span data-stu-id="a51a1-134">'None' if the font is not underlined.</span></span>
+    <span data-ttu-id="40b59-136">获取或设置表示字体的下划线类型的值。</span><span class="sxs-lookup"><span data-stu-id="40b59-136">Gets or sets a value that indicates the font's underline type.</span></span> <span data-ttu-id="40b59-137">如果字体不带下划线, 则为 "无"。</span><span class="sxs-lookup"><span data-stu-id="40b59-137">'None' if the font is not underlined.</span></span>
 
 
-    <span data-ttu-id="a51a1-135">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a51a1-135">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="40b59-138">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="40b59-138">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: underline
   fullName: underline
   langs:
