--- a/docs/docs-ref-autogen/word/word.interfaces.fontdata.yml
+++ b/docs/docs-ref-autogen/word/word.interfaces.fontdata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: fb36aeb473c0ee3da9f13d854998d9c08357ae96
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: bac2e256472397bc52cd59365507fbefb8dabe7c
+ms.sourcegitcommit: a422a2c3b9ada79477a9f873276b3c00765f7072
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26231662"
+ms.lasthandoff: 03/27/2019
+ms.locfileid: "30900389"
 items:
 - uid: word.Word.Interfaces.FontData
-  summary: <span data-ttu-id="2a254-101">描述调用"font.toJSON()"返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="2a254-101">An interface describing the data returned by calling "font.toJSON()".</span></span>
+  summary: <span data-ttu-id="63067-101">描述通过调用 "toJSON ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="63067-101">An interface describing the data returned by calling "font.toJSON()".</span></span>
   name: Word.Interfaces.FontData
   fullName: Word.Interfaces.FontData
   langs:
@@ -28,10 +28,10 @@ items:
   - word.Word.Interfaces.FontData.underline
 - uid: word.Word.Interfaces.FontData.bold
   summary: >-
-    <span data-ttu-id="2a254-p101">获取或设置表示字体是否为粗体的值。如果字体格式为粗体则为 true，否则为 false。</span><span class="sxs-lookup"><span data-stu-id="2a254-p101">Gets or sets a value that indicates whether the font is bold. True if the font is formatted as bold, otherwise, false.</span></span>
+    <span data-ttu-id="63067-102">获取或设置表示字体是否为粗体的值。</span><span class="sxs-lookup"><span data-stu-id="63067-102">Gets or sets a value that indicates whether the font is bold.</span></span> <span data-ttu-id="63067-103">如果字体格式为粗体则为 true，否则为 false。</span><span class="sxs-lookup"><span data-stu-id="63067-103">True if the font is formatted as bold, otherwise, false.</span></span>
 
 
-    <span data-ttu-id="2a254-104">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2a254-104">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="63067-104">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="63067-104">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: bold
   fullName: bold
   langs:
@@ -44,10 +44,10 @@ items:
       - boolean
 - uid: word.Word.Interfaces.FontData.color
   summary: >-
-    <span data-ttu-id="2a254-105">获取或设置指定字体的颜色。</span><span class="sxs-lookup"><span data-stu-id="2a254-105">Gets or sets the color for the specified font.</span></span> <span data-ttu-id="2a254-106">您可以提供中的值\#RRGGBB 格式或颜色名称。</span><span class="sxs-lookup"><span data-stu-id="2a254-106">You can provide the value in the '\#RRGGBB' format or the color name.</span></span>
+    <span data-ttu-id="63067-105">获取或设置指定字体的颜色。</span><span class="sxs-lookup"><span data-stu-id="63067-105">Gets or sets the color for the specified font.</span></span> <span data-ttu-id="63067-106">您可以提供 "\#RRGGBB" 格式的值或颜色名称。</span><span class="sxs-lookup"><span data-stu-id="63067-106">You can provide the value in the '\#RRGGBB' format or the color name.</span></span>
 
 
-    <span data-ttu-id="2a254-107">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2a254-107">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="63067-107">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="63067-107">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: color
   fullName: color
   langs:
@@ -60,10 +60,10 @@ items:
       - string
 - uid: word.Word.Interfaces.FontData.doubleStrikeThrough
   summary: >-
-    <span data-ttu-id="2a254-108">获取或设置一个值，该值指示字体是否具有双删除线。</span><span class="sxs-lookup"><span data-stu-id="2a254-108">Gets or sets a value that indicates whether the font has a double strikethrough.</span></span> <span data-ttu-id="2a254-109">如果字体为双删除线文本，否则为返回 false，则为 true。</span><span class="sxs-lookup"><span data-stu-id="2a254-109">True if the font is formatted as double strikethrough text, otherwise, false.</span></span>
+    <span data-ttu-id="63067-108">获取或设置一个值, 该值指示字体是否具有双删除线。</span><span class="sxs-lookup"><span data-stu-id="63067-108">Gets or sets a value that indicates whether the font has a double strikethrough.</span></span> <span data-ttu-id="63067-109">如果字体格式设置为加双删除线的文本则为 true，否则为 false。</span><span class="sxs-lookup"><span data-stu-id="63067-109">True if the font is formatted as double strikethrough text, otherwise, false.</span></span>
 
 
-    <span data-ttu-id="2a254-110">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2a254-110">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="63067-110">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="63067-110">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: doubleStrikeThrough
   fullName: doubleStrikeThrough
   langs:
@@ -76,10 +76,13 @@ items:
       - boolean
 - uid: word.Word.Interfaces.FontData.highlightColor
   summary: >-
-    <span data-ttu-id="2a254-111">获取或设置的突出显示颜色。</span><span class="sxs-lookup"><span data-stu-id="2a254-111">Gets or sets the highlight color.</span></span> <span data-ttu-id="2a254-112">若要将其设置，使用一个值，也在\#RRGGBB 格式或颜色名称。</span><span class="sxs-lookup"><span data-stu-id="2a254-112">To set it, use a value either in the '\#RRGGBB' format or the color name.</span></span> <span data-ttu-id="2a254-113">若要删除突出显示颜色，请将其设置为 null。</span><span class="sxs-lookup"><span data-stu-id="2a254-113">To remove highlight color, set it to null.</span></span> <span data-ttu-id="2a254-114">返回突出显示颜色可以是在\#RRGGBB 格式，对于混合突出显示颜色，为空字符串，或无 null 突出显示颜色。</span><span class="sxs-lookup"><span data-stu-id="2a254-114">The returned highlight color can be in the '\#RRGGBB' format, an empty string for mixed highlight colors, or null for no highlight color.</span></span>
+    <span data-ttu-id="63067-111">获取或设置突出显示颜色。</span><span class="sxs-lookup"><span data-stu-id="63067-111">Gets or sets the highlight color.</span></span> <span data-ttu-id="63067-112">若要对其进行设置, 请使用 "\#RRGGBB" 格式的值或颜色名称。</span><span class="sxs-lookup"><span data-stu-id="63067-112">To set it, use a value either in the '\#RRGGBB' format or the color name.</span></span> <span data-ttu-id="63067-113">若要删除突出显示颜色, 请将其设置为 null。</span><span class="sxs-lookup"><span data-stu-id="63067-113">To remove highlight color, set it to null.</span></span> <span data-ttu-id="63067-114">返回的突出显示颜色可以是 "\#RRGGBB" 格式、用于混合突出显示颜色的空字符串或 null (无突出显示颜色)。</span><span class="sxs-lookup"><span data-stu-id="63067-114">The returned highlight color can be in the '\#RRGGBB' format, an empty string for mixed highlight colors, or null for no highlight color.</span></span>
 
 
-    <span data-ttu-id="2a254-115">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2a254-115">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="63067-115">**注意**: 在 Office for Windows Desktop 中, 只有默认的突出显示颜色可用。</span><span class="sxs-lookup"><span data-stu-id="63067-115">**Note**: Only the default highlight colors are available in Office for Windows Desktop.</span></span> <span data-ttu-id="63067-116">这些是 "黄色"、"酸橙色"、"青绿色"、"浅绿"、"浅绿"、"Blue"、"Red"、"DarkBlue"、"青色"、"绿色"、"紫色"、"DarkRed"、"橄榄色"、"灰色"、"LightGray" 和 "黑色"。</span><span class="sxs-lookup"><span data-stu-id="63067-116">These are "Yellow", "Lime", "Turquoise", "Pink", "Blue", "Red", "DarkBlue", "Teal", "Green", "Purple", "DarkRed", "Olive", "Gray", "LightGray", and "Black".</span></span> <span data-ttu-id="63067-117">当外接程序在 Office for Windows Desktop 中运行时, 应用于该字体的任何其他颜色将转换为最接近的颜色。</span><span class="sxs-lookup"><span data-stu-id="63067-117">When the add-in runs in Office for Windows Desktop, any other color is converted to the closest color when applied to the font.</span></span>
+
+
+    <span data-ttu-id="63067-118">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="63067-118">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: highlightColor
   fullName: highlightColor
   langs:
@@ -92,10 +95,10 @@ items:
       - string
 - uid: word.Word.Interfaces.FontData.italic
   summary: >-
-    <span data-ttu-id="2a254-p105">获取或设置表示字体是否为斜体的值。如果字体为斜体则为 true，否则为 false。</span><span class="sxs-lookup"><span data-stu-id="2a254-p105">Gets or sets a value that indicates whether the font is italicized. True if the font is italicized, otherwise, false.</span></span>
+    <span data-ttu-id="63067-119">获取或设置表示字体是否为斜体的值。</span><span class="sxs-lookup"><span data-stu-id="63067-119">Gets or sets a value that indicates whether the font is italicized.</span></span> <span data-ttu-id="63067-120">如果字体为斜体则为 true，否则为 false。</span><span class="sxs-lookup"><span data-stu-id="63067-120">True if the font is italicized, otherwise, false.</span></span>
 
 
-    <span data-ttu-id="2a254-118">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2a254-118">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="63067-121">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="63067-121">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: italic
   fullName: italic
   langs:
@@ -108,10 +111,10 @@ items:
       - boolean
 - uid: word.Word.Interfaces.FontData.name
   summary: >-
-    <span data-ttu-id="2a254-119">获取或设置表示字体名称的值。</span><span class="sxs-lookup"><span data-stu-id="2a254-119">Gets or sets a value that represents the name of the font.</span></span>
+    <span data-ttu-id="63067-122">获取或设置表示字体名称的值。</span><span class="sxs-lookup"><span data-stu-id="63067-122">Gets or sets a value that represents the name of the font.</span></span>
 
 
-    <span data-ttu-id="2a254-120">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2a254-120">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="63067-123">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="63067-123">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: name
   fullName: name
   langs:
@@ -124,10 +127,10 @@ items:
       - string
 - uid: word.Word.Interfaces.FontData.size
   summary: >-
-    <span data-ttu-id="2a254-121">获取或设置表示字体大小（以磅值表示）的值。</span><span class="sxs-lookup"><span data-stu-id="2a254-121">Gets or sets a value that represents the font size in points.</span></span>
+    <span data-ttu-id="63067-124">获取或设置表示字体大小（以磅值表示）的值。</span><span class="sxs-lookup"><span data-stu-id="63067-124">Gets or sets a value that represents the font size in points.</span></span>
 
 
-    <span data-ttu-id="2a254-122">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2a254-122">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="63067-125">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="63067-125">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: size
   fullName: size
   langs:
@@ -140,10 +143,10 @@ items:
       - number
 - uid: word.Word.Interfaces.FontData.strikeThrough
   summary: >-
-    <span data-ttu-id="2a254-123">获取或设置一个值，指示该字体是否删除线。</span><span class="sxs-lookup"><span data-stu-id="2a254-123">Gets or sets a value that indicates whether the font has a strikethrough.</span></span> <span data-ttu-id="2a254-124">如果字体为删除线文本，否则为返回 false，则为 true。</span><span class="sxs-lookup"><span data-stu-id="2a254-124">True if the font is formatted as strikethrough text, otherwise, false.</span></span>
+    <span data-ttu-id="63067-126">获取或设置一个值, 该值指示字体是否具有删除线。</span><span class="sxs-lookup"><span data-stu-id="63067-126">Gets or sets a value that indicates whether the font has a strikethrough.</span></span> <span data-ttu-id="63067-127">如果字体格式设置为加删除线的文本则为 true，否则为 false。</span><span class="sxs-lookup"><span data-stu-id="63067-127">True if the font is formatted as strikethrough text, otherwise, false.</span></span>
 
 
-    <span data-ttu-id="2a254-125">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2a254-125">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="63067-128">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="63067-128">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: strikeThrough
   fullName: strikeThrough
   langs:
@@ -156,10 +159,10 @@ items:
       - boolean
 - uid: word.Word.Interfaces.FontData.subscript
   summary: >-
-    <span data-ttu-id="2a254-p107">获取或设置表示字体是否为下标的值。如果字体格式为下标则为 true，否则为 false。</span><span class="sxs-lookup"><span data-stu-id="2a254-p107">Gets or sets a value that indicates whether the font is a subscript. True if the font is formatted as subscript, otherwise, false.</span></span>
+    <span data-ttu-id="63067-129">获取或设置表示字体是否为下标的值。</span><span class="sxs-lookup"><span data-stu-id="63067-129">Gets or sets a value that indicates whether the font is a subscript.</span></span> <span data-ttu-id="63067-130">如果字体格式为下标则为 true，否则为 false。</span><span class="sxs-lookup"><span data-stu-id="63067-130">True if the font is formatted as subscript, otherwise, false.</span></span>
 
 
-    <span data-ttu-id="2a254-128">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2a254-128">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="63067-131">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="63067-131">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: subscript
   fullName: subscript
   langs:
@@ -172,10 +175,10 @@ items:
       - boolean
 - uid: word.Word.Interfaces.FontData.superscript
   summary: >-
-    <span data-ttu-id="2a254-p108">获取或设置表示字体是否为上标的值。如果字体格式为上标则为 true，否则为 false。</span><span class="sxs-lookup"><span data-stu-id="2a254-p108">Gets or sets a value that indicates whether the font is a superscript. True if the font is formatted as superscript, otherwise, false.</span></span>
+    <span data-ttu-id="63067-132">获取或设置表示字体是否为上标的值。</span><span class="sxs-lookup"><span data-stu-id="63067-132">Gets or sets a value that indicates whether the font is a superscript.</span></span> <span data-ttu-id="63067-133">如果字体格式为上标则为 true，否则为 false。</span><span class="sxs-lookup"><span data-stu-id="63067-133">True if the font is formatted as superscript, otherwise, false.</span></span>
 
 
-    <span data-ttu-id="2a254-131">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2a254-131">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="63067-134">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="63067-134">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: superscript
   fullName: superscript
   langs:
@@ -188,10 +191,10 @@ items:
       - boolean
 - uid: word.Word.Interfaces.FontData.underline
   summary: >-
-    <span data-ttu-id="2a254-132">获取或设置一个值，指示字体的下划线类型。</span><span class="sxs-lookup"><span data-stu-id="2a254-132">Gets or sets a value that indicates the font's underline type.</span></span> <span data-ttu-id="2a254-133">None 如果的字体不加下划线。</span><span class="sxs-lookup"><span data-stu-id="2a254-133">'None' if the font is not underlined.</span></span>
+    <span data-ttu-id="63067-135">获取或设置表示字体的下划线类型的值。</span><span class="sxs-lookup"><span data-stu-id="63067-135">Gets or sets a value that indicates the font's underline type.</span></span> <span data-ttu-id="63067-136">如果字体不带下划线, 则为 "无"。</span><span class="sxs-lookup"><span data-stu-id="63067-136">'None' if the font is not underlined.</span></span>
 
 
-    <span data-ttu-id="2a254-134">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2a254-134">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="63067-137">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="63067-137">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: underline
   fullName: underline
   langs:
