--- a/docs/docs-ref-autogen/word/word.interfaces.fontupdatedata.yml
+++ b/docs/docs-ref-autogen/word/word.interfaces.fontupdatedata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: a4ef33dbe1ab9b64c60dcd81f8d35d66ec05a7d9
-ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
+ms.openlocfilehash: dd4df0ddd17908649199d1f123b47e1a4d5de539
+ms.sourcegitcommit: a422a2c3b9ada79477a9f873276b3c00765f7072
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/13/2019
-ms.locfileid: "29979286"
+ms.lasthandoff: 03/27/2019
+ms.locfileid: "30900410"
 items:
 - uid: word.Word.Interfaces.FontUpdateData
-  summary: <span data-ttu-id="4fa4d-101">Font 对象，用于上的数据更新接口"font.set (<!-- -->{...}<!-- -->)".</span><span class="sxs-lookup"><span data-stu-id="4fa4d-101">An interface for updating data on the Font object, for use in "font.set(<!-- -->{ ... }<!-- -->)".</span></span>
+  summary: <span data-ttu-id="357c1-101">用于更新 font 对象上的数据的接口, 可用于 "font. set (</span><span class="sxs-lookup"><span data-stu-id="357c1-101">An interface for updating data on the Font object, for use in "font.set(</span></span><!-- --><span data-ttu-id="357c1-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="357c1-102"></span></span><!-- --><span data-ttu-id="357c1-103">)".</span><span class="sxs-lookup"><span data-stu-id="357c1-103"></span></span>
   name: Word.Interfaces.FontUpdateData
   fullName: Word.Interfaces.FontUpdateData
   langs:
@@ -28,10 +28,10 @@ items:
   - word.Word.Interfaces.FontUpdateData.underline
 - uid: word.Word.Interfaces.FontUpdateData.bold
   summary: >-
-    <span data-ttu-id="4fa4d-p101">获取或设置表示字体是否为粗体的值。如果字体格式为粗体则为 true，否则为 false。</span><span class="sxs-lookup"><span data-stu-id="4fa4d-p101">Gets or sets a value that indicates whether the font is bold. True if the font is formatted as bold, otherwise, false.</span></span>
+    <span data-ttu-id="357c1-104">获取或设置表示字体是否为粗体的值。</span><span class="sxs-lookup"><span data-stu-id="357c1-104">Gets or sets a value that indicates whether the font is bold.</span></span> <span data-ttu-id="357c1-105">如果字体格式为粗体则为 true，否则为 false。</span><span class="sxs-lookup"><span data-stu-id="357c1-105">True if the font is formatted as bold, otherwise, false.</span></span>
 
 
-    <span data-ttu-id="4fa4d-104">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4fa4d-104">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="357c1-106">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="357c1-106">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: bold
   fullName: bold
   langs:
@@ -44,10 +44,10 @@ items:
       - boolean
 - uid: word.Word.Interfaces.FontUpdateData.color
   summary: >-
-    <span data-ttu-id="4fa4d-105">获取或设置指定字体的颜色。</span><span class="sxs-lookup"><span data-stu-id="4fa4d-105">Gets or sets the color for the specified font.</span></span> <span data-ttu-id="4fa4d-106">您可以提供中的值\#RRGGBB 格式或颜色名称。</span><span class="sxs-lookup"><span data-stu-id="4fa4d-106">You can provide the value in the '\#RRGGBB' format or the color name.</span></span>
+    <span data-ttu-id="357c1-107">获取或设置指定字体的颜色。</span><span class="sxs-lookup"><span data-stu-id="357c1-107">Gets or sets the color for the specified font.</span></span> <span data-ttu-id="357c1-108">您可以提供 "\#RRGGBB" 格式的值或颜色名称。</span><span class="sxs-lookup"><span data-stu-id="357c1-108">You can provide the value in the '\#RRGGBB' format or the color name.</span></span>
 
 
-    <span data-ttu-id="4fa4d-107">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4fa4d-107">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="357c1-109">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="357c1-109">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: color
   fullName: color
   langs:
@@ -60,10 +60,10 @@ items:
       - string
 - uid: word.Word.Interfaces.FontUpdateData.doubleStrikeThrough
   summary: >-
-    <span data-ttu-id="4fa4d-108">获取或设置一个值，该值指示字体是否具有双删除线。</span><span class="sxs-lookup"><span data-stu-id="4fa4d-108">Gets or sets a value that indicates whether the font has a double strikethrough.</span></span> <span data-ttu-id="4fa4d-109">如果字体为双删除线文本，否则为返回 false，则为 true。</span><span class="sxs-lookup"><span data-stu-id="4fa4d-109">True if the font is formatted as double strikethrough text, otherwise, false.</span></span>
+    <span data-ttu-id="357c1-110">获取或设置一个值, 该值指示字体是否具有双删除线。</span><span class="sxs-lookup"><span data-stu-id="357c1-110">Gets or sets a value that indicates whether the font has a double strikethrough.</span></span> <span data-ttu-id="357c1-111">如果字体格式设置为加双删除线的文本则为 true，否则为 false。</span><span class="sxs-lookup"><span data-stu-id="357c1-111">True if the font is formatted as double strikethrough text, otherwise, false.</span></span>
 
 
-    <span data-ttu-id="4fa4d-110">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4fa4d-110">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="357c1-112">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="357c1-112">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: doubleStrikeThrough
   fullName: doubleStrikeThrough
   langs:
@@ -76,10 +76,13 @@ items:
       - boolean
 - uid: word.Word.Interfaces.FontUpdateData.highlightColor
   summary: >-
-    <span data-ttu-id="4fa4d-111">获取或设置的突出显示颜色。</span><span class="sxs-lookup"><span data-stu-id="4fa4d-111">Gets or sets the highlight color.</span></span> <span data-ttu-id="4fa4d-112">若要将其设置，使用一个值，也在\#RRGGBB 格式或颜色名称。</span><span class="sxs-lookup"><span data-stu-id="4fa4d-112">To set it, use a value either in the '\#RRGGBB' format or the color name.</span></span> <span data-ttu-id="4fa4d-113">若要删除突出显示颜色，请将其设置为 null。</span><span class="sxs-lookup"><span data-stu-id="4fa4d-113">To remove highlight color, set it to null.</span></span> <span data-ttu-id="4fa4d-114">返回突出显示颜色可以是在\#RRGGBB 格式，对于混合突出显示颜色，为空字符串，或无 null 突出显示颜色。</span><span class="sxs-lookup"><span data-stu-id="4fa4d-114">The returned highlight color can be in the '\#RRGGBB' format, an empty string for mixed highlight colors, or null for no highlight color.</span></span>
+    <span data-ttu-id="357c1-113">获取或设置突出显示颜色。</span><span class="sxs-lookup"><span data-stu-id="357c1-113">Gets or sets the highlight color.</span></span> <span data-ttu-id="357c1-114">若要对其进行设置, 请使用 "\#RRGGBB" 格式的值或颜色名称。</span><span class="sxs-lookup"><span data-stu-id="357c1-114">To set it, use a value either in the '\#RRGGBB' format or the color name.</span></span> <span data-ttu-id="357c1-115">若要删除突出显示颜色, 请将其设置为 null。</span><span class="sxs-lookup"><span data-stu-id="357c1-115">To remove highlight color, set it to null.</span></span> <span data-ttu-id="357c1-116">返回的突出显示颜色可以是 "\#RRGGBB" 格式、用于混合突出显示颜色的空字符串或 null (无突出显示颜色)。</span><span class="sxs-lookup"><span data-stu-id="357c1-116">The returned highlight color can be in the '\#RRGGBB' format, an empty string for mixed highlight colors, or null for no highlight color.</span></span>
 
 
-    <span data-ttu-id="4fa4d-115">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4fa4d-115">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="357c1-117">**注意**: 在 Office for Windows Desktop 中, 只有默认的突出显示颜色可用。</span><span class="sxs-lookup"><span data-stu-id="357c1-117">**Note**: Only the default highlight colors are available in Office for Windows Desktop.</span></span> <span data-ttu-id="357c1-118">这些是 "黄色"、"酸橙色"、"青绿色"、"浅绿"、"浅绿"、"Blue"、"Red"、"DarkBlue"、"青色"、"绿色"、"紫色"、"DarkRed"、"橄榄色"、"灰色"、"LightGray" 和 "黑色"。</span><span class="sxs-lookup"><span data-stu-id="357c1-118">These are "Yellow", "Lime", "Turquoise", "Pink", "Blue", "Red", "DarkBlue", "Teal", "Green", "Purple", "DarkRed", "Olive", "Gray", "LightGray", and "Black".</span></span> <span data-ttu-id="357c1-119">当外接程序在 Office for Windows Desktop 中运行时, 应用于该字体的任何其他颜色将转换为最接近的颜色。</span><span class="sxs-lookup"><span data-stu-id="357c1-119">When the add-in runs in Office for Windows Desktop, any other color is converted to the closest color when applied to the font.</span></span>
+
+
+    <span data-ttu-id="357c1-120">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="357c1-120">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: highlightColor
   fullName: highlightColor
   langs:
@@ -92,10 +95,10 @@ items:
       - string
 - uid: word.Word.Interfaces.FontUpdateData.italic
   summary: >-
-    <span data-ttu-id="4fa4d-p105">获取或设置表示字体是否为斜体的值。如果字体为斜体则为 true，否则为 false。</span><span class="sxs-lookup"><span data-stu-id="4fa4d-p105">Gets or sets a value that indicates whether the font is italicized. True if the font is italicized, otherwise, false.</span></span>
+    <span data-ttu-id="357c1-121">获取或设置表示字体是否为斜体的值。</span><span class="sxs-lookup"><span data-stu-id="357c1-121">Gets or sets a value that indicates whether the font is italicized.</span></span> <span data-ttu-id="357c1-122">如果字体为斜体则为 true，否则为 false。</span><span class="sxs-lookup"><span data-stu-id="357c1-122">True if the font is italicized, otherwise, false.</span></span>
 
 
-    <span data-ttu-id="4fa4d-118">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4fa4d-118">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="357c1-123">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="357c1-123">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: italic
   fullName: italic
   langs:
@@ -108,10 +111,10 @@ items:
       - boolean
 - uid: word.Word.Interfaces.FontUpdateData.name
   summary: >-
-    <span data-ttu-id="4fa4d-119">获取或设置表示字体名称的值。</span><span class="sxs-lookup"><span data-stu-id="4fa4d-119">Gets or sets a value that represents the name of the font.</span></span>
+    <span data-ttu-id="357c1-124">获取或设置表示字体名称的值。</span><span class="sxs-lookup"><span data-stu-id="357c1-124">Gets or sets a value that represents the name of the font.</span></span>
 
 
-    <span data-ttu-id="4fa4d-120">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4fa4d-120">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="357c1-125">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="357c1-125">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: name
   fullName: name
   langs:
@@ -124,10 +127,10 @@ items:
       - string
 - uid: word.Word.Interfaces.FontUpdateData.size
   summary: >-
-    <span data-ttu-id="4fa4d-121">获取或设置表示字体大小（以磅值表示）的值。</span><span class="sxs-lookup"><span data-stu-id="4fa4d-121">Gets or sets a value that represents the font size in points.</span></span>
+    <span data-ttu-id="357c1-126">获取或设置表示字体大小（以磅值表示）的值。</span><span class="sxs-lookup"><span data-stu-id="357c1-126">Gets or sets a value that represents the font size in points.</span></span>
 
 
-    <span data-ttu-id="4fa4d-122">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4fa4d-122">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="357c1-127">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="357c1-127">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: size
   fullName: size
   langs:
@@ -140,10 +143,10 @@ items:
       - number
 - uid: word.Word.Interfaces.FontUpdateData.strikeThrough
   summary: >-
-    <span data-ttu-id="4fa4d-123">获取或设置一个值，指示该字体是否删除线。</span><span class="sxs-lookup"><span data-stu-id="4fa4d-123">Gets or sets a value that indicates whether the font has a strikethrough.</span></span> <span data-ttu-id="4fa4d-124">如果字体为删除线文本，否则为返回 false，则为 true。</span><span class="sxs-lookup"><span data-stu-id="4fa4d-124">True if the font is formatted as strikethrough text, otherwise, false.</span></span>
+    <span data-ttu-id="357c1-128">获取或设置一个值, 该值指示字体是否具有删除线。</span><span class="sxs-lookup"><span data-stu-id="357c1-128">Gets or sets a value that indicates whether the font has a strikethrough.</span></span> <span data-ttu-id="357c1-129">如果字体格式设置为加删除线的文本则为 true，否则为 false。</span><span class="sxs-lookup"><span data-stu-id="357c1-129">True if the font is formatted as strikethrough text, otherwise, false.</span></span>
 
 
-    <span data-ttu-id="4fa4d-125">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4fa4d-125">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="357c1-130">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="357c1-130">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: strikeThrough
   fullName: strikeThrough
   langs:
@@ -156,10 +159,10 @@ items:
       - boolean
 - uid: word.Word.Interfaces.FontUpdateData.subscript
   summary: >-
-    <span data-ttu-id="4fa4d-p107">获取或设置表示字体是否为下标的值。如果字体格式为下标则为 true，否则为 false。</span><span class="sxs-lookup"><span data-stu-id="4fa4d-p107">Gets or sets a value that indicates whether the font is a subscript. True if the font is formatted as subscript, otherwise, false.</span></span>
+    <span data-ttu-id="357c1-131">获取或设置表示字体是否为下标的值。</span><span class="sxs-lookup"><span data-stu-id="357c1-131">Gets or sets a value that indicates whether the font is a subscript.</span></span> <span data-ttu-id="357c1-132">如果字体格式为下标则为 true，否则为 false。</span><span class="sxs-lookup"><span data-stu-id="357c1-132">True if the font is formatted as subscript, otherwise, false.</span></span>
 
 
-    <span data-ttu-id="4fa4d-128">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4fa4d-128">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="357c1-133">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="357c1-133">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: subscript
   fullName: subscript
   langs:
@@ -172,10 +175,10 @@ items:
       - boolean
 - uid: word.Word.Interfaces.FontUpdateData.superscript
   summary: >-
-    <span data-ttu-id="4fa4d-p108">获取或设置表示字体是否为上标的值。如果字体格式为上标则为 true，否则为 false。</span><span class="sxs-lookup"><span data-stu-id="4fa4d-p108">Gets or sets a value that indicates whether the font is a superscript. True if the font is formatted as superscript, otherwise, false.</span></span>
+    <span data-ttu-id="357c1-134">获取或设置表示字体是否为上标的值。</span><span class="sxs-lookup"><span data-stu-id="357c1-134">Gets or sets a value that indicates whether the font is a superscript.</span></span> <span data-ttu-id="357c1-135">如果字体格式为上标则为 true，否则为 false。</span><span class="sxs-lookup"><span data-stu-id="357c1-135">True if the font is formatted as superscript, otherwise, false.</span></span>
 
 
-    <span data-ttu-id="4fa4d-131">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4fa4d-131">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="357c1-136">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="357c1-136">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: superscript
   fullName: superscript
   langs:
@@ -188,10 +191,10 @@ items:
       - boolean
 - uid: word.Word.Interfaces.FontUpdateData.underline
   summary: >-
-    <span data-ttu-id="4fa4d-132">获取或设置一个值，指示字体的下划线类型。</span><span class="sxs-lookup"><span data-stu-id="4fa4d-132">Gets or sets a value that indicates the font's underline type.</span></span> <span data-ttu-id="4fa4d-133">None 如果的字体不加下划线。</span><span class="sxs-lookup"><span data-stu-id="4fa4d-133">'None' if the font is not underlined.</span></span>
+    <span data-ttu-id="357c1-137">获取或设置表示字体的下划线类型的值。</span><span class="sxs-lookup"><span data-stu-id="357c1-137">Gets or sets a value that indicates the font's underline type.</span></span> <span data-ttu-id="357c1-138">如果字体不带下划线, 则为 "无"。</span><span class="sxs-lookup"><span data-stu-id="357c1-138">'None' if the font is not underlined.</span></span>
 
 
-    <span data-ttu-id="4fa4d-134">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4fa4d-134">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="357c1-139">\[[API 集: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="357c1-139">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
   name: underline
   fullName: underline
   langs:
