commit translated contents

--- a/docs/docs-ref-autogen/excel/excel.interfaces.pivotlayoutdata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.pivotlayoutdata.yml
@@ -1,139 +1,126 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 174dc464ee31fe45d02104d5a92af69e6536f7e7
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30098675"
 items:
-- uid: excel.Excel.Interfaces.PivotLayoutData
-  summary: 描述通过调用 "pivotLayout ()" 返回的数据的接口。
-  name: Excel.Interfaces.PivotLayoutData
-  fullName: Excel.Interfaces.PivotLayoutData
-  langs:
-  - typeScript
-  type: interface
-  package: excel
-  children:
-  - excel.Excel.Interfaces.PivotLayoutData.autoFormat
-  - excel.Excel.Interfaces.PivotLayoutData.enableFieldList
-  - excel.Excel.Interfaces.PivotLayoutData.layoutType
-  - excel.Excel.Interfaces.PivotLayoutData.preserveFormatting
-  - excel.Excel.Interfaces.PivotLayoutData.showColumnGrandTotals
-  - excel.Excel.Interfaces.PivotLayoutData.showRowGrandTotals
-  - excel.Excel.Interfaces.PivotLayoutData.subtotalLocation
-- uid: excel.Excel.Interfaces.PivotLayoutData.autoFormat
-  summary: >-
-    如果在刷新或移动域时自动设置格式设置的格式, 则为 True。
+  - uid: excel.Excel.Interfaces.PivotLayoutData
+    summary: 描述通过调用 "pivotLayout ()" 返回的数据的接口。
+    name: Excel.Interfaces.PivotLayoutData
+    fullName: Excel.Interfaces.PivotLayoutData
+    langs:
+      - typeScript
+    type: interface
+    package: excel
+    children:
+      - excel.Excel.Interfaces.PivotLayoutData.autoFormat
+      - excel.Excel.Interfaces.PivotLayoutData.enableFieldList
+      - excel.Excel.Interfaces.PivotLayoutData.layoutType
+      - excel.Excel.Interfaces.PivotLayoutData.preserveFormatting
+      - excel.Excel.Interfaces.PivotLayoutData.showColumnGrandTotals
+      - excel.Excel.Interfaces.PivotLayoutData.showRowGrandTotals
+      - excel.Excel.Interfaces.PivotLayoutData.subtotalLocation
+  - uid: excel.Excel.Interfaces.PivotLayoutData.autoFormat
+    summary: |-
+      指定在刷新或移动域时是否自动设置格式设置的格式
 
+      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: autoFormat
+    fullName: autoFormat
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'autoFormat?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.PivotLayoutData.enableFieldList
+    summary: |-
+      指定字段列表是否可以显示在 UI 中。
 
-    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  isPreview: true
-  name: autoFormat
-  fullName: autoFormat
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'autoFormat?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.PivotLayoutData.enableFieldList
-  summary: >-
-    如此如果应在 UI 中显示或隐藏字段列表。
+      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: enableFieldList
+    fullName: enableFieldList
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'enableFieldList?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.PivotLayoutData.layoutType
+    summary: |-
+      此属性指示数据透视表上的所有字段的 PivotLayoutType。 如果字段状态不同，则为 null。
 
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: layoutType
+    fullName: layoutType
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'layoutType?: Excel.PivotLayoutType | "Compact" | "Tabular" | "Outline";'
+      return:
+        type:
+          - Excel.PivotLayoutType | "Compact" | "Tabular" | "Outline"
+  - uid: excel.Excel.Interfaces.PivotLayoutData.preserveFormatting
+    summary: |-
+      指定当通过透视、排序或更改页字段项等操作刷新或重新计算报表时, 是否保留格式设置。
 
-    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  isPreview: true
-  name: enableFieldList
-  fullName: enableFieldList
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'enableFieldList?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.PivotLayoutData.layoutType
-  summary: >-
-    此属性指示数据透视表上的所有字段的 PivotLayoutType。 如果字段状态不同，则为 null。
+      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: preserveFormatting
+    fullName: preserveFormatting
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'preserveFormatting?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.PivotLayoutData.showColumnGrandTotals
+    summary: |-
+      指定数据透视表报表是否显示列总计。
 
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: showColumnGrandTotals
+    fullName: showColumnGrandTotals
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'showColumnGrandTotals?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.PivotLayoutData.showRowGrandTotals
+    summary: |-
+      指定数据透视表报表是否显示行总计。
 
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: layoutType
-  fullName: layoutType
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'layoutType?: Excel.PivotLayoutType | "Compact" | "Tabular" | "Outline";'
-    return:
-      type:
-      - Excel.PivotLayoutType | "Compact" | "Tabular" | "Outline"
-- uid: excel.Excel.Interfaces.PivotLayoutData.preserveFormatting
-  summary: >-
-    如此如果通过透视、排序或更改页字段项等操作刷新或重新计算报表时保留格式。
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: showRowGrandTotals
+    fullName: showRowGrandTotals
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'showRowGrandTotals?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.PivotLayoutData.subtotalLocation
+    summary: |-
+      此属性指示数据透视表上的所有字段的 SubtotalLocationType。 如果字段状态不同，则为 null。
 
-
-    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  isPreview: true
-  name: preserveFormatting
-  fullName: preserveFormatting
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'preserveFormatting?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.PivotLayoutData.showColumnGrandTotals
-  summary: >-
-    如果数据透视表显示列总计，则为 True。
-
-
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: showColumnGrandTotals
-  fullName: showColumnGrandTotals
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'showColumnGrandTotals?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.PivotLayoutData.showRowGrandTotals
-  summary: >-
-    如果数据透视表显示行总计，则为 True。
-
-
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: showRowGrandTotals
-  fullName: showRowGrandTotals
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'showRowGrandTotals?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.PivotLayoutData.subtotalLocation
-  summary: >-
-    此属性指示数据透视表上的所有字段的 SubtotalLocationType。 如果字段状态不同，则为 null。
-
-
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: subtotalLocation
-  fullName: subtotalLocation
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'subtotalLocation?: Excel.SubtotalLocationType | "AtTop" | "AtBottom" | "Off";'
-    return:
-      type:
-      - Excel.SubtotalLocationType | "AtTop" | "AtBottom" | "Off"
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: subtotalLocation
+    fullName: subtotalLocation
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'subtotalLocation?: Excel.SubtotalLocationType | "AtTop" | "AtBottom" | "Off";'
+      return:
+        type:
+          - Excel.SubtotalLocationType | "AtTop" | "AtBottom" | "Off"
