--- a/docs/docs-ref-autogen/excel/excel.interfaces.pivottableloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.pivottableloadoptions.yml
@@ -1,137 +1,124 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: b5abc40883f6c3bc552330f0e1bd3e92e0c68f0e
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30095707"
 items:
-- uid: excel.Excel.Interfaces.PivotTableLoadOptions
-  summary: >-
-    表示 Excel 数据透视表。
+  - uid: excel.Excel.Interfaces.PivotTableLoadOptions
+    summary: |-
+      表示 Excel 数据透视表。
 
+      \[[API 集: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: Excel.Interfaces.PivotTableLoadOptions
+    fullName: Excel.Interfaces.PivotTableLoadOptions
+    langs:
+      - typeScript
+    type: interface
+    package: excel
+    children:
+      - excel.Excel.Interfaces.PivotTableLoadOptions.$all
+      - excel.Excel.Interfaces.PivotTableLoadOptions.enableDataValueEditing
+      - excel.Excel.Interfaces.PivotTableLoadOptions.id
+      - excel.Excel.Interfaces.PivotTableLoadOptions.layout
+      - excel.Excel.Interfaces.PivotTableLoadOptions.name
+      - excel.Excel.Interfaces.PivotTableLoadOptions.useCustomSortLists
+      - excel.Excel.Interfaces.PivotTableLoadOptions.worksheet
+  - uid: excel.Excel.Interfaces.PivotTableLoadOptions.$all
+    name: $all
+    fullName: $all
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: '$all?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.PivotTableLoadOptions.enableDataValueEditing
+    summary: |-
+      指定数据透视表是否允许用户对数据正文中的值进行编辑。
 
-    \[[API 集: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: Excel.Interfaces.PivotTableLoadOptions
-  fullName: Excel.Interfaces.PivotTableLoadOptions
-  langs:
-  - typeScript
-  type: interface
-  package: excel
-  children:
-  - excel.Excel.Interfaces.PivotTableLoadOptions.$all
-  - excel.Excel.Interfaces.PivotTableLoadOptions.enableDataValueEditing
-  - excel.Excel.Interfaces.PivotTableLoadOptions.id
-  - excel.Excel.Interfaces.PivotTableLoadOptions.layout
-  - excel.Excel.Interfaces.PivotTableLoadOptions.name
-  - excel.Excel.Interfaces.PivotTableLoadOptions.useCustomSortLists
-  - excel.Excel.Interfaces.PivotTableLoadOptions.worksheet
-- uid: excel.Excel.Interfaces.PivotTableLoadOptions.$all
-  name: $all
-  fullName: $all
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: '$all?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.PivotTableLoadOptions.enableDataValueEditing
-  summary: >-
-    如此如果数据透视表在排序时应使用自定义列表。
+      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: enableDataValueEditing
+    fullName: enableDataValueEditing
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'enableDataValueEditing?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.PivotTableLoadOptions.id
+    summary: |-
+      数据透视表的 ID。 只读。
 
+      \[[API 集: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: id
+    fullName: id
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'id?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.PivotTableLoadOptions.layout
+    summary: |-
+      PivotLayout，用于说明数据透视表的布局和可视化结构。
 
-    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  isPreview: true
-  name: enableDataValueEditing
-  fullName: enableDataValueEditing
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'enableDataValueEditing?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.PivotTableLoadOptions.id
-  summary: >-
-    数据透视表的 ID。只读。
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: layout
+    fullName: layout
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'layout?: Excel.Interfaces.PivotLayoutLoadOptions;'
+      return:
+        type:
+          - excel.Excel.Interfaces.PivotLayoutLoadOptions
+  - uid: excel.Excel.Interfaces.PivotTableLoadOptions.name
+    summary: |-
+      PivotTable 对象的名称。
 
+      \[[API 集: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: name
+    fullName: name
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'name?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.PivotTableLoadOptions.useCustomSortLists
+    summary: |-
+      指定在排序时, 数据透视表是否使用自定义列表。
 
-    \[[API 集: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: id
-  fullName: id
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'id?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.PivotTableLoadOptions.layout
-  summary: >-
-    PivotLayout，用于说明数据透视表的布局和可视化结构。
+      \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: useCustomSortLists
+    fullName: useCustomSortLists
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'useCustomSortLists?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.PivotTableLoadOptions.worksheet
+    summary: |-
+      包含当前 PivotTable 对象的工作表。
 
-
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: layout
-  fullName: layout
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'layout?: Excel.Interfaces.PivotLayoutLoadOptions;'
-    return:
-      type:
-      - excel.Excel.Interfaces.PivotLayoutLoadOptions
-- uid: excel.Excel.Interfaces.PivotTableLoadOptions.name
-  summary: >-
-    PivotTable 对象的名称。
-
-
-    \[[API 集: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: name
-  fullName: name
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'name?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.PivotTableLoadOptions.useCustomSortLists
-  summary: >-
-    如此如果数据透视表在排序时应使用自定义列表。
-
-
-    \[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  isPreview: true
-  name: useCustomSortLists
-  fullName: useCustomSortLists
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'useCustomSortLists?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.PivotTableLoadOptions.worksheet
-  summary: >-
-    包含当前数据透视表的工作表。
-
-
-    \[[API 集: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: worksheet
-  fullName: worksheet
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'worksheet?: Excel.Interfaces.WorksheetLoadOptions;'
-    return:
-      type:
-      - excel.Excel.Interfaces.WorksheetLoadOptions
+      \[[API 集: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: worksheet
+    fullName: worksheet
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'worksheet?: Excel.Interfaces.WorksheetLoadOptions;'
+      return:
+        type:
+          - excel.Excel.Interfaces.WorksheetLoadOptions
